# django-r2

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  rav.yaml  tailwind.config.js
sample_project/cfehome/: settings.py  urls.py
sample_project/templates/: base.html  home.html
src/django_r2/: __init__.py  admin.py  apps.py  context_processors.py  decorators.py  settings.py  signals.py  tasks.py  urls.py
src/django_r2/buckets/: models.py  services.py  views.py
src/django_r2/helpers/formatting/: __init__.py  filenames.py  humanize.py
src/django_r2/helpers/myboto/: client.py  empty.py
src/django_r2/helpers/mycloudflare/: buckets.py  client.py  cors.py
src/django_r2/helpers/staticfiles/: locators.py
src/django_r2/migrations/: 0001_initial.py
src/django_r2/models/: __init__.py
src/django_r2/objects/: models.py  services.py  views.py
src/django_r2/static/django_r2/theme/prod/: django_r2_theme.min.css
src/django_r2/static/django_r2/upload.js/prod/: upload.min.js
src/django_r2/upload.js/: FileDisplay.jsx  FileUpload.jsx  index.jsx  utils.js
src/django_r2/upload.js/hooks/: useS3Upload.jsx
src/django_r2/upload.js/icons/: cloud.jsx
src/django_r2/upload.js/media/: index.js
src/django_r2/uploads/: views.py
