[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-r2"
version = "0.0.1"
description = "A Django app to manage Cloudflare R2"
readme = "README.md"
authors = [
  { name = "Justin Mitchel", email = "justin@codingforentrepreneurs.com" },
]
license = { text = "MIT" }
keywords = ["Django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "cloudflare>=4.0.0",
    "boto3>=1.36.6"
]

[project.urls]
Homepage = "https://github.com/jmitchel3/django-r2"
Repository = "https://github.com/jmitchel3/django-r2"

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
addopts = """
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false
xfail_strict = true

[tool.coverage.run]
branch = true
parallel = true
source = ["django_r2"]
omit = [
    "*/migrations/*",
    "*/admin.py",
    "tests/*",
]

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
warn_unreachable = true 